fix: text match overflowing

--- a/src/assets/search.css
+++ b/src/assets/search.css
@@ -48,3 +48,17 @@ svg.search-icon {
 .search-result:hover {
     background-color: #f1f1f1 !important;
 }
+
+.match .match-text {
+    word-break: break-all;
+    white-space: normal;
+
+    line-height: 1.2rem !important;
+    min-height: 1.2rem !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
